Fix ExtensionDomParserTest