@@ -47,7 +47,6 @@ tasks.withType(ScalaCompile) {
     options.fork = true
 }
 
-//compileJava.dependsOn 'requiresJava7'
 compileJava.dependsOn 'requiresJava8'
 
 compileJava.options.encoding = 'UTF-8'
@@ -70,7 +69,7 @@ compileTestJava {
 sourceCompatibility = JavaVersion.VERSION_1_8
 targetCompatibility = JavaVersion.VERSION_1_8
 
-// Compile all Java projects with jdk7 bootstrap classpath (to properly support target compatibility)
+// Compile all Java projects with jdk8 bootstrap classpath (to properly support target compatibility)
 compileJava.options.bootstrapClasspath = files("${jdk8}/jre/lib/rt.jar", "${jdk8}/lib/jsse.jar")
 
 // There is no clear way to run the same task under multiple JDKs, so we use the following gradle properties
@@ -81,7 +80,8 @@ compileJava.options.bootstrapClasspath = files("${jdk8}/jre/lib/rt.jar", "${jdk8
 test {
     if (project.hasProperty("test16")) {
         executable = jdk16 + '/bin/java'
-        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED'
+        jvmArgs '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                '--add-exports=java.xml/com.sun.org.apache.xalan.internal.xsltc.trax=ALL-UNNAMED'
         useJUnit {
             excludeCategories 'com.newrelic.test.marker.Java16IncompatibleTest'
         }
